# wildidea

./: .env.example  .gitignore  HERMES_DEPLOY.md  LICENSE  README.md  README_EN.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: openai.yaml
deploy/macmini/: README.md  bootstrap.sh  install_launch_agent.sh  start.sh  wildidea.env.example  worker.sh
docs/: legacy-skill.md  web-api.md  wildidea-skill.md
references/: common-chinese-chars.txt  domains.json  mao-seeds.md  mechanism-transfer.md  output-innovation-recipes.md  paradigms.md  poster-guide.md  poster-palettes.md  red-blue-workflow.md  search-integration.md  tavily-curl-example.md
scripts/: backfill_algorithm_source_scenes.py  check_domains.py  check_mirrors.sh  install.sh  pick_domain_slots.py  pick_seed.py  search_char.py  sync_web_branch.sh  validate_poster.py  validate_search.py
skill/wildidea/: SKILL.md
skill/wildidea/agents/: openai.yaml
skill/wildidea/references/: domains.json  output-innovation-recipes.md  poster-guide.md  poster-palettes.md  search-integration.md  wildidea-skill.md
skill/wildidea/scripts/: pick_domain_slots.py  pick_seed.py  validate_poster.py
skill/wildidea/templates/: poster.html
src/wildidea/: __init__.py  calibrate.py  cli.py  configure.py  dashboard.py  judge.py  llm.py  pipeline.py  renderer.py  style.py
src/wildidea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/wildidea/core/: __init__.py  (+3 more)
templates/: output-example.md  poster.html
tests/: test_real_api_smoke.py  test_web.py  test_wildidea.py
(+24 files in other folders)
