[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wildidea"
version = "0.1.0"
description = "Cross-domain mechanism transfer for innovation ideation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
wildidea = "wildidea.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wildidea = ["prompts/*.txt"]
